Add text changes and fix specialisation and focus section

--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
             </div>
         </section>
         <section class="services" id="services">
-            <div class="title">
+            <div class="title" id="services-title">
                 <h2><span class="color">OUR</span><br>SERVICES</h2>
                 <img src="img/logo.jpg" class="bea-image" alt="bea-image">
             </div>
-            <div class="services_body">
+            <div class="services_body" id="main-services">
                 <dl>
                     <dt>COMMERCIAL LAW</dt>
                     <p>
-                        <dd>Expertise in business-related legal matters, including contracts, business formations, and commercial litigation.</dd>
+                        <dd>Expertise in business-related legal matters, including the drafting, vetting and interpretation of contracts.<br>Debt collection</dd>
                     </p>
                 </dl>
                 <dl>
@@ -80,11 +80,11 @@
                     </p>
                 </dl>
                 <button class="read-more" id="more-services">READ MORE &#8594</button><br>
-            </div>
-            <h1 id="specialisation_title">SPECIALISATION & FOCUS</h1>
+            </div> 
             <div id="specialisation">
-                <div class="services_body">
-                    <div class="specifics">
+                <h1 id="specialisation_title">SPECIALISATION & FOCUS</h1>
+                <div>
+                    <div>
                         <p>Employment and Labour Law</p>
                         <ul>
                             <li>Employee Rights: Addressing issues related to wages, working hours, discrimination, harassment, and workplace safety.</li>
@@ -93,7 +93,7 @@
                             <li>Wrongful Termination: Representing clients in cases of unjust dismissal, wrongful termination, and employment-related disputes.</li>
                         </ul>
                     </div>
-                    <div class="specifics">
+                    <div>
                             <p>Commercial Law</p>
                         <ul>
                             <li>Contracts: Drafting, reviewing, and negotiating contracts for various business transactions, including sales, partnerships, and service agreements.</li>
@@ -101,7 +101,7 @@
                             <li>Commercial Litigation: Handling disputes arising from commercial transactions, including breach of contract, fraud, and other business-related conflicts.</li>
                         </ul>
                     </div>
-                    <div class="specifics">
+                    <div>
                         <p>Construction Law</p>
                         <ul>
                             <li>Contract Negotiation: Assisting in the negotiation and drafting of construction contracts, including those between owners, contractors, and subcontractors.</li>
@@ -110,7 +110,7 @@
                             <li>Construction Defects: Addressing legal matters related to construction defects, warranties, and liability for faulty workmanship.</li>
                         </ul> 
                     </div>
-                    <div class="specifics">
+                    <div>
                         <p>Wills & Deceased Estates</p>
                         <ul>
                             <li>Estate Planning: Drafting Wills: Preparing legal documents that outline the distribution of a person's assets and the appointment of guardianship for minor children.</li>
@@ -121,77 +121,53 @@
                         </ul>
                     </div>
                 </div>
-                <div class="contract">
+                <div class="focus_body">
                     <p>Contract Administration</p>
-                    <span>Contract administration a multifaceted and crucial aspect of business operations.  It involves the management and oversight of contracts throughout their lifecycle, from creation to completion. It is a critical aspect of ensuring that contractual agreements are executed efficiently, legally, and in a manner that aligns with the interests of all parties involved.<br><br>Bare Eagler Attorneys can help you with effective contract administration in order for your business to maintain positive relationships and minimize the potential for disputes. We pay attention to detail and have a thorough understanding of legal and business considerations.<br><br>Our tailored contract administration involves:<br><br></span>
-                </div>
-                <div class="services_body">
-                    <div class="specific">
-                        <p>Contract Creation</p>
-                        <ul>
-                            <li>Drafting - The initial creation of a contract, which involves clearly articulated the terms, conditions, and obligations of each party. This phase requires careful consideration of legal requirements and potential risks.</li>
-                        </ul>
-                    </div>
-                    <div class="specific">
-                        <p>Negotiation</p>
-                        <ul>
-                            <li>Review and Amendments: Parties may propose changes to the initial draft. We facilitate these discussions, ensuring that modifications align with the interests of all parties.</li>
-                        </ul>
-                    </div>
-                    <div class="specific">
-                        <p>Execution</p>
-                        <ul>
-                            <li>Signing and Authorization: Once both parties agree to the terms, the contract is signed and authorized. We ensure that all required signatures are obtained.</li>
-                        </ul>
-                    </div>
-                    <div class="specific">
-                        <p>Record Keeping</p>
-                        <ul>
-                            <li>Document Management: We maintain a comprehensive record of all contracts, including versions, amendments, and related correspondence. This ensures easy access to information and helps in monitoring compliance.</li>
-                        </ul>
-                    </div>
-                    <div class="specific">
-                        <p>Communication</p>
-                        <ul>
-                            <li>Stakeholder Communication: We facilitate communication between involved parties, ensuring that everyone is aware of their responsibilities and any changes to the agreement.</li>
-                        </ul> 
-                    </div>
-                    <div class="specific">
-                        <p>Compliance Monitoring</p>
-                        <ul>
-                            <li>Ongoing Oversight: Throughout the contract's duration, we monitor compliance with the terms and conditions outlined in the agreement. This includes tracking deadlines, deliverables, and performance metrics.</li>
-                        </ul>
-                    </div>
-                    <div class="specific">
-                            <p>Issue Resolution</p>
-                        <ul>
-                            <li>Conflict Resolution: We address any issues or disputes that may arise during the execution of the contract. This involves finding solutions that align with the terms of the agreement.</li>
-                        </ul>
-                    </div>
-                    <div class="specific">
-                        <p>Performance Evaluation</p>
-                        <ul>
-                            <li>Assessment of Deliverables: we can assist with evaluating the quality and timeliness of deliverables and services provided under the contract. This assessment informs our clients of future decisions and potential renewals.</li>
-                        </ul>
-                    </div>
-                    <div class="specific">
-                        <p>Contract Amendments</p>
-                        <ul>
-                            <li>Changes to the Agreement: If circumstances change, we can facilitate amendments to the contract to reflect the new reality while protecting the interests of all parties.</li>
-                        </ul>
-                    </div>
-                    <div class="specific">
-                        <p>Contract Closeout</p>
-                        <ul>
-                            <li>Finalisation: Once all obligations are met, we can assist in overseeing the formal closure of the contract. This includes ensuring that all deliverables are received, payments are made, and any required documentation is completed.</li>
-                        </ul>
-                    </div>
-                    <div class="specific">
-                        <p>Risk Management</p>
-                        <ul>
-                            <li>Identification and Mitigation: We actively identify and address potential risks associated with a contract. This involves implementing strategies to mitigate risks and ensure that the contract remains legally and operationally sound.</li>
-                        </ul>
-                    </div>     
+                    <span>Contract administration a multifaceted and crucial aspect of business operations.  It involves the management and oversight of contracts throughout their lifecycle, from creation to completion. It is a critical aspect of ensuring that contractual agreements are executed efficiently, legally, and in a manner that aligns with the interests of all parties involved. Bare Eagler Attorneys can help you with effective contract administration in order for your business to maintain positive relationships and minimize the potential for disputes. We pay attention to detail and have a thorough understanding of legal and business considerations.<br><br>Our tailored contract administration involves:</span><br><br>
+                    <span>Contract Creation</span>
+                    <ul>
+                        <li>Drafting: The initial creation of a contract, which involves clearly articulated the terms, conditions, and obligations of each party. This phase requires careful consideration of legal requirements and potential risks.</li>
+                    </ul>
+                    <span>Negotiation</span>
+                    <ul>
+                        <li>Review and Amendments: Parties may propose changes to the initial draft. We facilitate these discussions, ensuring that modifications align with the interests of all parties.</li>
+                    </ul>
+                    <span>Execution</span>
+                    <ul>
+                        <li>Signing and Authorization: Once both parties agree to the terms, the contract is signed and authorized. We ensure that all required signatures are obtained.</li>
+                    </ul>
+                    <span>Record Keeping</span>
+                    <ul>
+                        <li>Document Management: We maintain a comprehensive record of all contracts, including versions, amendments, and related correspondence. This ensures easy access to information and helps in monitoring compliance.</li>
+                    </ul>
+                    <span>Communication</span>
+                    <ul>
+                        <li>Stakeholder Communication: We facilitate communication between involved parties, ensuring that everyone is aware of their responsibilities and any changes to the agreement.</li>
+                    </ul> 
+                    <span>Compliance Monitoring</span>
+                    <ul>
+                        <li>Ongoing Oversight: Throughout the contract's duration, we monitor compliance with the terms and conditions outlined in the agreement. This includes tracking deadlines, deliverables, and performance metrics.</li>
+                    </ul>
+                        <span>Issue Resolution</span>
+                    <ul>
+                        <li>Conflict Resolution: We address any issues or disputes that may arise during the execution of the contract. This involves finding solutions that align with the terms of the agreement.</li>
+                    </ul>
+                    <span>Performance Evaluation</span>
+                    <ul>
+                        <li>Assessment of Deliverables: we can assist with evaluating the quality and timeliness of deliverables and services provided under the contract. This assessment informs our clients of future decisions and potential renewals.</li>
+                    </ul>
+                    <span>Contract Amendments</span>
+                    <ul>
+                        <li>Changes to the Agreement: If circumstances change, we can facilitate amendments to the contract to reflect the new reality while protecting the interests of all parties.</li>
+                    </ul>
+                    <span>Contract Closeout</span>
+                    <ul>
+                        <li>Finalisation: Once all obligations are met, we can assist in overseeing the formal closure of the contract. This includes ensuring that all deliverables are received, payments are made, and any required documentation is completed.</li>
+                    </ul>
+                    <span>Risk Management</span>
+                    <ul>
+                        <li>Identification and Mitigation: We actively identify and address potential risks associated with a contract. This involves implementing strategies to mitigate risks and ensure that the contract remains legally and operationally sound.</li>
+                    </ul>   
                 </div>
             </div>
         </section>
@@ -206,13 +182,12 @@
             <section class="about_body">
                 <h1>ABOUT US</h1>
                 <div class="about_body-content">
-                    <h2>Who we are</h2>
-                    <p>
-                        Bare Eagler Attorneys (BEA) is a 100% black female owned boutique law firm headquartered in Johannesburg, South Africa. The firm is led by Eagler Bare, a duly experienced and admitted attorney of the High Court of South Africa who is supported by seasoned legal consultants with over a decade of experience for in-depth insights and effective solutions.</p>
-                    <h2>Our values</h2>
-                    <p>Client-Centricity, Integrity, Collaboration and Excellence.</p>
-                    <h2>Our mission</h2>
-                    <p>BEA is centered around its clients and guided by its unwavering integrity to provide unparalleled legal services through timely, effective, and ethical legal solutions. At the heart of BEA's legal practice is an unwavering commitment to excellence. Each case is approached with meticulous attention to detail, strategic thinking, and a passion for achieving optimal outcomes for clients.</p>
+                    
+                    <p>Bare Eagler Attorneys (BEA) is a 100% black female owned boutique law firm headquartered in East Rand, Johannesburg, South Africa.  The firm is led by Eagler Bare, a duly experienced and admitted attorney of the High Court of South Africa who is supported by seasoned legal consultants with over a decade of experience for in-depth insights and effective solutions.</p>
+                    <h2>Values</h2>
+                    <p>Client-Centricity, Integrity, Collaboration & Excellence.</p>
+                    <h2>Mission</h2>
+                    <p>BEA is centered around its clients and guided by its steadfast integrity to provide unparalleled legal services through timely, effective, and ethical legal solutions. At the heart of BEA's legal practice is an unwavering commitment to excellence. Each case is approached with meticulous attention to detail, strategic thinking, and a passion for achieving optimal outcomes for clients.</p>
                 </div>      
             </section>
         </section>
