Change nav text

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <nav id="nav">
                 <span id="close">X</span>
                 <li><a href="#">HOME</a></li>
-                <li><a href="#services">SERVICES</a></li>
-                <li><a href="#about">ABOUT</a></li>
-                <li><a href="#people">PEOPLE</a></li>
+                <li><a href="#services">OUR SERVICES</a></li>
+                <li><a href="#about">ABOUT US</a></li>
+                <li><a href="#people">OUR PEOPLE</a></li>
                 <li><a href="#contact">CONTACT</a></li>
             </nav>
         </header>
