--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav id="nav">
             <span id="close">X</span>
             <a onclick="scrollToSection('#')">HOME</a>
-            <a onclick="scrollToSection('services')">OUR SERVICES</a>
+            <a onclick="scrollToSection('services')" id="our-services">OUR SERVICES</a>
             <a onclick="scrollToSection('about')">ABOUT US</a>
             <a onclick="scrollToSection('people')">OUR PEOPLE</a>
             <a onclick="scrollToSection('contact')">CONTACT</a>
