Add display flex on the services section on mobile devices

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 <div>
                     <img src="img/Eagler.jpg" id="eagler" alt="Eagler-image">
                     <figcaption>EAGLER BARE</figcaption>
-                    <p>FOUNDER & PRINCIPAL ATTORNEY</p>
+                    <p>FOUNDER & PRINCIPAL <br>ATTORNEY</p>
                 </div>     
             </figure>
         </section> 
@@ -229,8 +229,8 @@
                 <div>
                     <input type="text" name="first-name" id="name" placeholder="First Name">
                     <input type="text" name="last-name" id="name" placeholder="Last Name">
-                    <input type="text" name="contact" id="contact" placeholder="Contact Name">
-                    <input type="email" name="email" id="email" placeholder="Email Address">
+                    <input type="text" name="contact" id="contact" placeholder="Contact Number">
+                    <input type="email" name="email" id="email" placeholder="Your Email Address">
                     <input type="text" name="subject" id="subject" placeholder="Subject">
                 </div>
                 <div>
