Add margin-top on people image for large screens

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 <button class="read-more" id="people_read-more">READ MORE &#8594</button><br>
             </section>
             <figure>
-                <div>
+                <div class="image">
                     <img src="img/Eagler.jpg" id="eagler" alt="Eagler-image">
                     <figcaption>EAGLER BARE</figcaption>
                     <p>FOUNDER & PRINCIPAL <br>ATTORNEY</p>
